[package]
name = "twitter_clone"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "twitter_clone"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
actix-web = { version = "4.4", features = ["rustls"] }
scylla = "0.11"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
env_logger = "0.10"
log = "0.4"
fake = { version = "2.9", features = ["derive"] }
futures = "0.3"
num_cpus = "1.0"
r2d2 = "0.8"  # Connection pooling